# mackup

./: pyproject.toml
.github/workflows/: install.yaml  linelint.yaml  lint.yaml  markdown.yaml  test.yaml
mackup/: application.py  appsdb.py  config.py  constants.py  mackup.py  main.py  utils.py
tests/: config_tests.py  test_config.py  test_utils.py
